<resources>
    <string name="app_name">Karen_Shop_App</string>

    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="login">Login</string>
    <string name="change_photo">Change photo</string>
    <string name="trade_store">Trade Store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="test_person_name">Satria Adhi Prahana</string>
    <string name="upload_item">Upload item</string>
    <string name="test_dollar_value">$ 1593</string>
    <string name="password">Password</string>
    <string name="test_reviews_quantity">(4000 reviews)</string>
    <string name="test_rating">3.9</string>
    <string name="test_price">$2,500</string>
    <string name="location">Location</string>
    <string name="date">date</string>
    <string name="trade_by">Trade by</string>
    <string name="what_are_you_looking_for">What are you looking for ?</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="welcome_back">Welcome back</string>
    <string name="brands">Brands</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="color">Color:</string>
    <string name="add_to_cart">add to cart</string>
</resources>