<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.pages.log_in.LogInFragment">

    <TextView
        android:id="@+id/textView2"
        style="@style/logIn_sign_in_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="151dp"
        android:text="@string/welcome_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_in_first_name"
        android:layout_width="289dp"
        android:layout_height="30dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_text_bg"
        android:gravity="center"
        android:hint="@string/first_name"
        android:padding="7dp"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/et_sign_in_password"
        android:layout_width="289dp"
        android:layout_height="30dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/edit_text_bg"
        android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
        android:gravity="center"
        android:hint="@string/password"
        android:padding="7dp"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_first_name" />

    <TextView
        android:id="@+id/btn_log_in"
        style="@style/logIn_sign_in_style"
        android:layout_width="289dp"
        android:layout_height="46dp"
        android:layout_margin="43dp"
        android:layout_marginTop="106dp"
        android:background="@drawable/btn_add_to_cart_bg"
        android:text="@string/login"
        android:textColor="#EAEAEA"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_in_password" />

</androidx.constraintlayout.widget.ConstraintLayout>