<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.pages.sign_in.SignInFragment">



    <TextView
        android:id="@+id/textView2"
        style="@style/logIn_sign_in_style"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="151dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_in_first_name"
        android:layout_width="289dp"
        android:layout_height="30dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center"
        android:hint="@string/first_name"
        android:padding="7dp"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/et_sign_in_last_name"
        android:layout_width="289dp"
        android:layout_height="30dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center"
        android:hint="@string/last_name"
        android:padding="7dp"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_first_name" />

    <EditText
        android:id="@+id/et_sign_in_email"
        android:layout_width="289dp"
        android:layout_height="30dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center"
        android:hint="@string/email"
        android:padding="7dp"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_in_last_name" />


    <TextView
        android:id="@+id/btn_sign_in"
        style="@style/logIn_sign_in_style"
        android:layout_width="289dp"
        android:layout_height="46dp"
        android:layout_margin="43dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/blue_btn_bg"
        android:text="@string/sign_in"
        android:textColor="#EAEAEA"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_in_email" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/already_have_an_account"
        android:textColor="#808080"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/btn_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/log_in"
        android:textColor="#254FE6"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <LinearLayout
        android:id="@+id/google_authorization_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_log_in"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/google_authorization_img"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_google"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/google_authorization_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/sign_in_with_google"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/apple_authorization_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/google_authorization_layout"
        app:layout_constraintStart_toStartOf="@+id/google_authorization_layout"
        app:layout_constraintTop_toBottomOf="@+id/google_authorization_layout"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/apple_authorization_img"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_apple"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/apple_authorization_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/sign_in_with_apple"
            android:textSize="16sp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>