<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="22dp"
        android:layout_height="21dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="12.5dp"
        android:src="@drawable/ic_navigation_view_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profile_photo"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/profileFieldsNameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trade_by"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            style="@style/profileFieldsNameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#4E55D7"
            android:textSize="20sp" />


    </LinearLayout>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_photo"
        android:layout_width="32dp"
        android:layout_height="30dp"
        app:shapeAppearance="@style/profilePhotoShape"
        android:layout_marginEnd="47dp"
        android:src="@drawable/test_profile_img"
        app:layout_constraintBottom_toTopOf="@+id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="#4E4D4D"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/location"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/profile_photo"
        app:layout_constraintStart_toStartOf="@+id/profile_photo"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/location_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more"
        app:layout_constraintBottom_toBottomOf="@+id/location"
        app:layout_constraintStart_toEndOf="@+id/location"
        app:layout_constraintTop_toBottomOf="@+id/profile_photo" />


</androidx.constraintlayout.widget.ConstraintLayout>