<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="15dp"
    tools:context=".ui.pages.page_1.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_action_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_go_back_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/profileFieldsNameStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Profile"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Chang photo-->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_photo"
            android:layout_width="61dp"
            android:layout_height="61dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/test_profile_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_action_bar_layout"
            app:shapeAppearanceOverlay="@style/profilePhotoShape"
            app:strokeColor="#C0C0C0"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/change_profile_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/change_photo"
            android:textColor="#C0C0C0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_photo" />
        <!--Person name-->
        <TextView
            android:id="@+id/profile_name"
            style="@style/logIn_sign_in_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/test_person_name"
            android:textColor="#3F3F3F"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_profile_photo" />

        <!--Button Upload-->
        <LinearLayout
            android:id="@+id/upload_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="40dp"
            android:background="@drawable/blue_btn_bg"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_name">

            <ImageView
                android:id="@+id/image_upload"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_upload"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/upload_item"
                android:textColor="#EAEAEA" />

        </LinearLayout>

        <!--trade store-->
        <LinearLayout
            android:id="@+id/layout_trade_store"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upload_layout">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/profile_fields_bg"
                android:padding="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/profile_field_ic"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:id="@+id/btn_trade_store"
                style="@style/profileFieldsNameStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="166dp"
                android:text="@string/trade_store" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/ic_profile_field_more"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <!--Payment method-->
        <LinearLayout
            android:id="@+id/layout_payment_method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_trade_store">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/profile_fields_bg"
                android:padding="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/profile_field_ic"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:id="@+id/btn_payment_method"
                style="@style/profileFieldsNameStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="122dp"
                android:text="@string/payment_method" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/ic_profile_field_more"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <!--Balance -->
        <LinearLayout
            android:id="@+id/layout_balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_payment_method">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/profile_fields_bg"
                android:padding="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/profile_field_ic"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_balance"
                style="@style/profileFieldsNameStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="137dp"
                android:text="@string/balance" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="500"
                android:gravity="center"
                android:text="@string/test_dollar_value"
                android:textColor="#040402"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--Trade history -->
        <LinearLayout
            android:id="@+id/layout_trade_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_balance">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/profile_fields_bg"
                android:padding="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/profile_field_ic"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_thread_history"
                style="@style/profileFieldsNameStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="155dp"
                android:text="@string/trade_history" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/ic_profile_field_more"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <!--Restore Purchase -->
        <LinearLayout
            android:id="@+id/layout_restore_purchase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_trade_history">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/profile_fields_bg"
                android:padding="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_restore"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_restore_purchase"
                style="@style/profileFieldsNameStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="127dp"
                android:text="@string/restore_purchase" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/ic_profile_field_more"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <!--Help-->
        <LinearLayout
            android:id="@+id/layout_help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_restore_purchase">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/profile_fields_bg"
                android:padding="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_help"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_help"
                style="@style/profileFieldsNameStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="127dp"
                android:text="@string/help" />
        </LinearLayout>

        <!--Log Out-->
        <LinearLayout
            android:id="@+id/layout_log_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="14dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_help">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/profile_fields_bg"
                android:padding="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_log_out"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_log_out"
                style="@style/profileFieldsNameStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="127dp"
                android:text="@string/log_out" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>